--- a/src/psetw.cmdlets/psetw.cmdlets.csproj
+++ b/src/psetw.cmdlets/psetw.cmdlets.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="psetw.psd1">
+    <None Update="psetwquery.psd1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
